VZDEV/src/objects/CCPM_journey__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_Type__c</fullName>
        <label>Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Journey</relationshipLabel>
        <relationshipName>Journey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Journey</relationshipLabel>
        <relationshipName>Journey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_createdDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_doubleOptOutSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Opt Out Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isFollowUpSMSSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow-Up SMS Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isInitialSMSSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial SMS Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isMerged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merged?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isProspectSMSsent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event SMS sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_leadSource__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NETACE</fullName>
                </value>
                <value>
                    <fullName>Quote-Retail</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-DESK</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-MIPP</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-MAPP</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-MDOT</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-TDOT</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-GGDESK</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-GGMOB</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-GGTAB</fullName>
                </value>
                <value>
                    <fullName>MFRAPP</fullName>
                </value>
                <value>
                    <fullName>DOTCOM</fullName>
                </value>
                <value>
                    <fullName>ONEPOS</fullName>
                </value>
                <value>
                    <fullName>Quote-Telesales</fullName>
                </value>
                <value>
                    <fullName>EROES</fullName>
                </value>
                <value>
                    <fullName>ACSS</fullName>
                </value>
                <value>
                    <fullName>SALESFORCE</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>NR-BBDT</fullName>
                </value>
                <value>
                    <fullName>NR-BEST</fullName>
                </value>
                <value>
                    <fullName>NR-APPL</fullName>
                </value>
                <value>
                    <fullName>NR-TARG</fullName>
                </value>
                <value>
                    <fullName>NR-APDT</fullName>
                </value>
                <value>
                    <fullName>POS-Store Visit</fullName>
                </value>
                <value>
                    <fullName>CUSTOMER QUOTE-RETAIL</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>CUSTOMER QUOTE-TELESALES</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_leadStatus__c</fullName>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_mobileNumber__c</fullName>
        <label>MTN</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Journey</label>
    <nameField>
        <displayFormat>J-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>